
public class Text extends Resource{
private int pages, words;
}
