@startuml

title __RESOURCE's Class Diagram__\n

  package Akali {
    package Akali.resource {
      abstract class AbstractResource {
          - content : String
          - language : String
          - status : String
          - origin : String
          - author : String
          + getStatus()
          + setStatus()
          + getAuthor()
          + setAuthor()
          + getLanguage()
          + setLanguage()
          + getContent()
          + setContent()
          + getOrigin()
          + setOrigin()
      }
    }
  }
  

  package Akali {
    package Akali.resource {
      class Recording {
          - path : String
          - duration : double
      }
    }
  }
  

  package Akali {
    package Akali.resource {
      class Text {
          - pages : int
          - words : int
      }
    }
  }
  

  Recording -up-|> AbstractResource
  Text -up-|> AbstractResource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
